--- a/MunicipalTrashProgram/Views/Home/Index.cshtml
+++ b/MunicipalTrashProgram/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1 class="">K&amp;N Municipal Trash Pickup Site</h1>
+    <p class="lead">Members and Employees ~ Please Log in to access features! Or register to become member.</p>
+    <p class=""></p>
 </div>
 
 <div class="row">
