--- a/MunicipalTrashProgram/Views/Shared/_Layout.cshtml
+++ b/MunicipalTrashProgram/Views/Shared/_Layout.cshtml
@@ -17,15 +17,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Trash Collectors", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a class="navbar-brand" href="/">Trash Collectors</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li><a href="/" class="">Home</a></li>
+                    <li><a href="/Home/About" class="">About</a></li>
+                    <li><a href="/Home/Contact">Contact</a></li>
                 </ul>
-                @Html.Partial("_LoginPartial")
+                    <ul class="nav navbar-nav navbar-right">
+        <li><a href="/Account/Register" id="registerLink" class="">Register</a></li>
+        <li><a href="/Account/Login" id="loginLink" class="">Log in</a></li>
+    </ul>
+
             </div>
         </div>
     </div>
