added employee code with ghost text

--- a/MunicipalTrashProgram/Views/Home/About.cshtml
+++ b/MunicipalTrashProgram/Views/Home/About.cshtml
@@ -2,6 +2,6 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Kris and Nate are &nbsp;your average people that would like to help out the community.&nbsp;<br>We started this company in order to help those with a busy schedule and could not pick up trash<br>by themselves</h3>
 
 <p>Use this area to provide additional information.</p>
