--- a/MunicipalTrashProgram/Views/Account/Register.cshtml
+++ b/MunicipalTrashProgram/Views/Account/Register.cshtml
@@ -42,6 +42,13 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.EmployeeCode, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.EmployeeCode, new { @class = "form-control", @placeholder = "Enter Employee Code if Applicable" })
+        </div>
+    </div>
+
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
