added functionality to getting user data

--- a/MunicipalTrashProgram/Views/Shared/_Layout.cshtml
+++ b/MunicipalTrashProgram/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>© 2016 - K&amp;N Municipal Trash Pickup Application</p>
         </footer>
     </div>
 
