--- a/MunicipalTrashProgram/Views/Home/Index.cshtml
+++ b/MunicipalTrashProgram/Views/Home/Index.cshtml
@@ -10,13 +10,9 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Example</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <h2 class="" contenteditable="false"></h2>
+        <p class="" contenteditable="false"></p>
+        <p class=""><br></p>
     </div>
     <div class="col-md-4">
         <h2>Get more libraries</h2>
