--- a/MunicipalTrashProgram/Views/Manage/Index.cshtml
+++ b/MunicipalTrashProgram/Views/Manage/Index.cshtml
@@ -23,7 +23,7 @@
             }
             ]
         </dd>
-        <table class="table">
+        @*<table class="table">
             @foreach (var item in Model.db.addresses)
             {
             <tr>
@@ -49,7 +49,7 @@
                 </td>
             </tr>
             }
-        </table>
+        </table>*@
 
 
 
