--- a/MunicipalTrashProgram/Views/Manage/Index.cshtml
+++ b/MunicipalTrashProgram/Views/Manage/Index.cshtml
@@ -23,7 +23,7 @@
             }
             ]
         </dd>
-        <table class="table">
+        @*<table class="table">
             @foreach (var item in Model.db.addresses)
             {
             <tr>
@@ -49,79 +49,118 @@
                 </td>
             </tr>
             }
-        </table>
+        </table>*@
+            <dt>Pick up Day:</dt>
+            <dd>
+                @{
+                    List<SelectListItem> listItems = new List<SelectListItem>();
+                    listItems.Add(new SelectListItem
+                    {
+                        Text = "Monday",
+                        Value = "Monday"
+                    });
+                    listItems.Add(new SelectListItem
+                    {
+                        Text = "Tuesday",
+                        Value = "Tuesday",
+                        Selected = true
+                    });
+                    listItems.Add(new SelectListItem
+                    {
+                        Text = "Wednesday",
+                        Value = "Wednesday"
+                    });
+                    listItems.Add(new SelectListItem
+                    {
+                        Text = "Thursday",
+                        Value = "Thursday"
+                    });
+                    listItems.Add(new SelectListItem
+                    {
+                        Text = "Friday",
+                        Value = "Friday"
+                    });
+                    listItems.Add(new SelectListItem
+                    {
+                        Text = "Saturday",
+                        Value = "Saturday"
+                    });
+                }
+                @Html.DropDownList("yourDropName", listItems, new { @class = "form-control" })
+
+            </dd>
 
 
+            <dt>Password:</dt>
+            <dd>
+                [
+                @if (Model.HasPassword)
+                {
+                    @Html.ActionLink("Change your password", "ChangePassword")
+                }
+                else
+                {
+                    @Html.ActionLink("Create", "SetPassword")
+                }
+                ]
+            </dd>
+            @*<dt>External Logins:</dt>
+            <dd>
+                @Model.Logins.Count [
+                @Html.ActionLink("Manage", "ManageLogins") ]
+            </dd>*@
+            @*
+            Phone Numbers can used as a second factor of verification in a two-factor authentication system.
 
-                    <dt>Password:</dt>
-                    <dd>
-                        [
-                        @if (Model.HasPassword)
+             See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+                for details on setting up this ASP.NET application to support two-factor authentication using SMS.
+
+             Uncomment the following block after you have set up two-factor authentication
+            *@
+            @*
+            <dt>Phone Number:</dt>
+            <dd>
+                @(Model.PhoneNumber ?? "None") [
+                @if (Model.PhoneNumber != null)
+                {
+                    @Html.ActionLink("Change", "AddPhoneNumber")
+                    @: &nbsp;|&nbsp;
+                    @Html.ActionLink("Remove", "RemovePhoneNumber")
+                }
+                else
+                {
+                    @Html.ActionLink("Add", "AddPhoneNumber")
+                }
+                ]
+            </dd>
+            *@
+            @*<dt>Two-Factor Authentication:</dt>
+            <dd>
+                <p>
+                    There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+                    for details on setting up this ASP.NET application to support two-factor authentication.
+                </p>*@
+            @*@if (Model.TwoFactor)
+                    {
+                        using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                         {
-                            @Html.ActionLink("Change your password", "ChangePassword")
+                            @Html.AntiForgeryToken()
+                            <text>Enabled
+                            <input type="submit" value="Disable" class="btn btn-link" />
+                            </text>
                         }
-                        else
+                    }
+                    else
+                    {
+                        using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                         {
-                            @Html.ActionLink("Create", "SetPassword")
+                            @Html.AntiForgeryToken()
+                            <text>Disabled
+                            <input type="submit" value="Enable" class="btn btn-link" />
+                            </text>
                         }
-                        ]
-                    </dd>
-                    @*<dt>External Logins:</dt>
-                    <dd>
-                        @Model.Logins.Count [
-                        @Html.ActionLink("Manage", "ManageLogins") ]
-                    </dd>*@
-                    @*
-                    Phone Numbers can used as a second factor of verification in a two-factor authentication system.
+                    }
+            </dd>*@
+        </dl>
 
-                     See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                        for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-
-                     Uncomment the following block after you have set up two-factor authentication
-                    *@
-                    @*
-                    <dt>Phone Number:</dt>
-                    <dd>
-                        @(Model.PhoneNumber ?? "None") [
-                        @if (Model.PhoneNumber != null)
-                        {
-                            @Html.ActionLink("Change", "AddPhoneNumber")
-                            @: &nbsp;|&nbsp;
-                            @Html.ActionLink("Remove", "RemovePhoneNumber")
-                        }
-                        else
-                        {
-                            @Html.ActionLink("Add", "AddPhoneNumber")
-                        }
-                        ]
-                    </dd>
-                    *@
-                    @*<dt>Two-Factor Authentication:</dt>
-                    <dd>
-                        <p>
-                            There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                            for details on setting up this ASP.NET application to support two-factor authentication.
-                        </p>*@
-                    @*@if (Model.TwoFactor)
-                            {
-                                using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                                {
-                                    @Html.AntiForgeryToken()
-                                    <text>Enabled
-                                    <input type="submit" value="Disable" class="btn btn-link" />
-                                    </text>
-                                }
-                            }
-                            else
-                            {
-                                using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                                {
-                                    @Html.AntiForgeryToken()
-                                    <text>Disabled
-                                    <input type="submit" value="Enable" class="btn btn-link" />
-                                    </text>
-                                }
-                            }
-                    </dd>*@
-</dl>
 </div>
