--- a/MunicipalTrashProgram/Views/Manage/Index.cshtml
+++ b/MunicipalTrashProgram/Views/Manage/Index.cshtml
@@ -10,21 +10,48 @@
     <h4>Change your account settings</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>Profile:</dt>
+        @(Model.Profile ?? "None") [
+        @if (Model.currentUser.address.Address_id >= 1)
+        {//user here
+        <dt>Your Address:</dt>
         <dd>
-            @(Model.Profile ?? "None") [
-            @if (Model.Profile != null)
-            {
-                @Html.ActionLink("Change/View", "AddProfile")
-            }
-            else
-            {
-                @Html.ActionLink("Add", "AddProfile")
-            }
-            ]
+            <tr>
+                <td>
+                    @Model.currentUser.address.HouseNumber;
+                </td>
+                <td>
+                    @Model.currentUser.address.Street;
+                </td>
+                <td>
+                    @Model.currentUser.address.City;
+                </td>
+                <td>
+                    @Model.currentUser.address.State;
+                </td>
+                <td>
+                    @Model.currentUser.address.ZipCode;
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = Model.currentUser.address.Address_id }) 
+                </td>
+            </tr>
+            </dd>
+        }else{
+        <dt>Your Route's Zip Code:</dt>
+        <dd>
+            <tr>
+                <td>
+                    @Model.currentUser.worker.WorkingZipCode;
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = Model.currentUser.worker.Worker_id }) |
+                </td>
+            </tr>
         </dd>
+        }
+        ]
         @*<table class="table">
-                @foreach (var item in Model.db.addresses)
+                @foreach (var item in Model.currentUser.address)
                 {
                 <tr>
                     <td>
