--- a/MunicipalTrashProgram/Views/Shared/_Layout.cshtml
+++ b/MunicipalTrashProgram/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Manage", "Manage", "Index")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
