--- a/MunicipalTrashProgram/Views/UserInfoes/Index.cshtml
+++ b/MunicipalTrashProgram/Views/UserInfoes/Index.cshtml
@@ -41,9 +41,7 @@
             @Html.DisplayFor(modelItem => item.TotalBill)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.UserInfo_id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.UserInfo_id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.UserInfo_id })
+            @Html.ActionLink("Edit Your Pickup Date", "Edit", new { id=item.UserInfo_id })
         </td>
     </tr>
 }
