--- a/MunicipalTrashProgram/Views/Workers/Details.cshtml
+++ b/MunicipalTrashProgram/Views/Workers/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model MunicipalTrashProgram.Models.Worker
+﻿@*@model MunicipalTrashProgram.Models.Worker
 
 @{
     ViewBag.Title = "Details";
@@ -23,4 +23,4 @@
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Worker_id }) |
     @Html.ActionLink("Back to List", "Index")
-</p>
+</p>*@
